# libsecp256k1-sp-example

./: .gitignore  .gitmodules  CMakeLists.txt  ecc_tests_2024-04-08-110045.collapsed  main.cpp  sp_module.cpp  sp_module.h  sp_self.cpp  sp_self.h  utils.cpp  utils.h  vectors.h
bench_results/: bench-10-iter.txt  bench-100-iter.txt  bench-ecdh-cmp-100-iter.txt  bench-old.txt  bench-optimised-module-100-iter.txt
